# AddonManager

./: .gitignore  .pre-commit-config.yaml  ALLOWED_PYTHON_PACKAGES.txt  Addon.py  AddonCatalog.py  AddonCatalog.schema.json  AddonCatalogCacheCreator.py  AddonManager.py  AddonManagerOptions.py  AddonManagerOptions.ui  AddonStats.py  CMakeLists.txt  InitGui.py  MacroCacheCreator.py  NetworkManager.py  PySideWrapper.py  PythonDependencyUpdateDialog.ui  README.md  TestAddonManagerApp.py  TestAddonManagerGui.py  addonmanager_connection_checker.py  addonmanager_dependency_installer.py  addonmanager_firstrun.py  addonmanager_freecad_interface.py  addonmanager_git.py  addonmanager_icon_utilities.py  addonmanager_installation_manifest.py  addonmanager_installer.py  addonmanager_installer_gui.py  addonmanager_licenses.py  addonmanager_macro.py  addonmanager_macro_parser.py  addonmanager_metadata.py  addonmanager_package_details_controller.py  addonmanager_preferences_defaults.json  addonmanager_preferences_migrations.py  addonmanager_python_deps.py  addonmanager_python_deps_commands.py  addonmanager_python_deps_gui.py  addonmanager_readme_controller.py  (+15 more)
Manager/: Dependencies.py  Dependencies.ui
Widgets/: addonmanager_colors.py  addonmanager_utility_dialogs.py  addonmanager_widget_addon_buttons.py  addonmanager_widget_filter_selector.py  addonmanager_widget_global_buttons.py  addonmanager_widget_package_details_view.py  addonmanager_widget_progress_bar.py  addonmanager_widget_readme_browser.py  addonmanager_widget_search.py  addonmanager_widget_view_control_bar.py  spinner.py  (+1 more)
(+59 files in other folders)
