# SPDX-License-Identifier: LGPL-2.1-or-later
# SPDX-FileCopyrightText: 2026 FreeCAD Project Association
# SPDX-FileNotice: Part of the AddonManager.

[project]
name = "AddonManager"
version = "2026.6.2dev"
description = "FreeCAD Addon Manager — install and manage workbenches, macros, and more"
requires-python = ">=3.11"
dependencies = [
    "defusedxml",
    "scour",
    "requests",
    "PySide6<6.11",
]
license = { text = "LGPL-2.1-or-later" }

[tool.black]
line-length = 100
